--- a/template/package.json
+++ b/template/package.json
@@ -6,11 +6,11 @@
       "watch": "watchify -g require-globify load.js -o loaded.js -v"
   },
   "dependencies": {
-    "underscore":"*",
-    "underscore.string":"3.2.3",
-    "express-web": "file:../"
+    "express-web": "git+ssh://git@bitbucket.org/starterstep/express-web.git",
+    "underscore":"1.8.3",
+    "underscore.string":"3.2.3"
   },
   "devDependencies": {
-    "require-globify": "*"
+    "require-globify": "1.3.0"
   }
 }
