--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "underscore":"*",
-    "underscore.string":"3.2.3"
+    "underscore":"1.8.3",
+    "underscore.string":"3.3.4"
   },
   "devDependencies": {
-    "require-globify": "*"
+    "require-globify": "1.3.0"
   }
 }
