--- a/template/package.json
+++ b/template/package.json
@@ -3,12 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-      "watch": "watchify -g require-globify load.js -o loaded.js -v"
+      "watch": "watchify -g ejs-browserify-transformer -g require-globify load.js -o loaded.js -v"
   },
   "dependencies": {
-    "express-web": "git+ssh://git@bitbucket.org/starterstep/express-web.git",
-    "underscore":"1.8.3",
-    "underscore.string":"3.2.3"
+    "express-web": "git://github.com/starterstep/express-web.git"
   },
   "devDependencies": {
     "require-globify": "1.3.0"
