--- a/package.json
+++ b/package.json
@@ -6,7 +6,5 @@
     "underscore":"1.8.3",
     "underscore.string":"3.3.4"
   },
-  "devDependencies": {
-    "require-globify": "1.3.0"
-  }
+  "devDependencies": {}
 }
